--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-  <div class="super-info-bg">
-    <div class="super-info">
+  <div class="superinfo-bg">
+    <div class="superinfo">
       <p>Seg / Sex - 08:00 às 18:00</p>
       <a href="tel:+551199999-9999">+55 11 99999-9999</a>
       <p>Av. Universo Inter, 230, São Paulo - SP</p>
@@ -35,7 +35,7 @@
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#produtos">Produtos</a></li>
           <li><a href="#precos">Preços</a></li>
-          <li><a href="#qualidade">Qualidade</a></li>
+          <li><a href="#qualidades">Qualidades</a></li>
         </ul>
       </nav>
     </div>
@@ -130,7 +130,7 @@
     </div>
   </section>
 
-  <section class="qualidade" id="qualidade">
+  <section class="qualidades" id="qualidades">
     <div class="qualidade-item">
       <h2>Inteligente</h2>
       <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão.</p>
