--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="#">FlexBlog</a>
       </div>
 
-      <nav>
+      <nav class="menu-nav">
         <ul>
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#produtos">Produtos</a></li>
