feat: estilização da introdução finalizada.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     </div>
   </header>
 
-  <h1 class="introducao">Novos valores e <br>
-    Propriedades de CSS</h1>
+  <h1 class="introducao">Novos valores e <br>Propriedades de CSS</h1>
 
   <section class="sobre" id="sobre">
     <div class="sobre-info">
