feat: finalizado a estilação do sobre.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
   <div class="superinfo-bg">
     <div class="superinfo">
-      <p>Seg / Sex - 08:00 às 18:00</p>
+      <p>Seg / Sáb - 10:00 às 22:00</p>
       <a href="tel:+551199999-9999">+55 11 99999-9999</a>
-      <p>Av. Universo Inter, 230, São Paulo - SP</p>
+      <p>Av. Universo Estelar, 230, São Paulo - SP</p>
     </div>
   </div>
 
@@ -50,14 +50,14 @@
       <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
 
       <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
+    </div>
 
-      <div class="sobre-img">
-        <img src="./src/assets/img/sobre1.jpg" alt="Sobre 1">
-      </div>
+    <div class="sobre-img">
+      <img src="./src/assets/img/sobre1.jpg" alt="Sobre 1">
+    </div>
 
-      <div class="sobre-img">
-        <img src="./src/assets/img/sobre2.jpg" alt="Sobre 2">
-      </div>
+    <div class="sobre-img">
+      <img src="./src/assets/img/sobre2.jpg" alt="Sobre 2">
     </div>
   </section>
 
