feat: estilização feita do newsletter.

--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
     </div>
   </section>
 
-  <section class="newslleter">
+  <section class="newsletter">
     <div class="newsletter-info">
       <h1>Newsletter</h1>
       <p>Assine e fique por dentro das novidades</p>
     </div>
 
-    <form class="newslleter-form">
+    <form class="newsletter-form">
       <input type="text" placeholder="Seu e-mail">
       <button type="submit">Assinar</button>
     </form>
